Bug 166025 - Dolphin crashes when hovering mouse over certain self-extracting zipped .exe files
Summary: Dolphin crashes when hovering mouse over certain self-extracting zipped .exe ...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Jos van den Oever
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-08 11:48 UTC by mps
Modified: 2008-07-09 00:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
winzip81.exe (1.81 MB, application/x-ms-dos-executable)
2008-07-08 13:18 UTC, mstarkey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mps 2008-07-08 11:48:42 UTC
Doesn't happen with all files, but with the winzip81.exe installer file, 
dolphin crashes everytime i hover over the icon. Other windows executables 
programs (eg winzip70.exe and wrar320.exe) don't do this. The winzip81.exe file 
that causes the crash extracts and installs properly on a windows machine so I 
don't think it is corrupted. The crash happens whether the file is on a cd, and 
usb key or my hard drive.

FWIW I have Nepomuk turned off.

I rebuilt this morning - rev 829325. Here is the backtrace. Thanks for your 
help.

Application: Dolphin (dolphin), signal SIGABRT
Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1209112352 (LWP 3364)]
[KCrash handler]
#6  0x00110402 in __kernel_vsyscall ()
#7  0x07997690 in raise () from /lib/libc.so.6
#8  0x07998f91 in abort () from /lib/libc.so.6
#9  0x0799093e in __assert_fail () from /lib/libc.so.6
#10 0x05d61825 in Strigi::SubInputStream::read ()
   from /home/kde-devel/kde/kde4/lib/libstreams.so.0
#11 0x05d51545 in Strigi::DataEventInputStream::read ()
   from /home/kde-devel/kde/kde4/lib/libstreams.so.0
#12 0x05d6309d in Strigi::ZipInputStream::readFileName ()
   from /home/kde-devel/kde/kde4/lib/libstreams.so.0
#13 0x05d634af in Strigi::ZipInputStream::readHeader ()
   from /home/kde-devel/kde/kde4/lib/libstreams.so.0
#14 0x05d6389f in Strigi::ZipInputStream::nextEntry ()
   from /home/kde-devel/kde/kde4/lib/libstreams.so.0
#15 0x05e09de2 in ZipEndAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#16 0x05e0a4db in ZipExeEndAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#17 0x05de5a3a in Strigi::StreamAnalyzerPrivate::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#18 0x05de6311 in Strigi::StreamAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#19 0x05da123e in Strigi::AnalysisResult::indexChild ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#20 0x05e09f1a in ZipEndAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#21 0x05de5a3a in Strigi::StreamAnalyzerPrivate::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#22 0x05de6311 in Strigi::StreamAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#23 0x05da123e in Strigi::AnalysisResult::indexChild ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#24 0x05e09f1a in ZipEndAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#25 0x05e0a4db in ZipExeEndAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#26 0x05de5a3a in Strigi::StreamAnalyzerPrivate::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#27 0x05de6311 in Strigi::StreamAnalyzer::analyze ()
   from /home/kde-devel/kde/kde4/lib/libstreamanalyzer.so.0
#28 0x00ba8b28 in KFileMetaInfoPrivate::init (this=0x8bbae90, 
    stream=@0xbf87722c, url=@0xbf877224, mtime=1137767988)
    at /home/kde-devel/kde/src/kdelibs/kio/kio/kfilemetainfo.cpp:201
#29 0x00ba8f11 in KFileMetaInfo (this=0xbf877284, path=@0xbf877288)
    at /home/kde-devel/kde/src/kdelibs/kio/kio/kfilemetainfo.cpp:224
#30 0x0807f2d6 in InfoSidebarPage::showMetaInfo (this=0x89b1cd0)
    at /home/kde-devel/kde/src/kdebase/apps/dolphin/src/infosidebarpage.cpp:388
#31 0x0807fb84 in InfoSidebarPage::showItemInfo (this=0x89b1cd0)
    at /home/kde-devel/kde/src/kdebase/apps/dolphin/src/infosidebarpage.cpp:223
#32 0x0807fe21 in InfoSidebarPage::slotInfoTimeout (this=0x89b1cd0)
    at /home/kde-devel/kde/src/kdebase/apps/dolphin/src/infosidebarpage.cpp:229
#33 0x08080484 in InfoSidebarPage::qt_metacall (this=0x89b1cd0, 
    _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbf877454)
    at /home/kde-devel/kde/build/kdebase/apps/dolphin/src/infosidebarpage.moc:93
#34 0x0026ae61 in QMetaObject::activate (sender=0x89fdcf0, 
    from_signal_index=4, to_signal_index=4, argv=0x0)
    at kernel/qobject.cpp:3007
#35 0x0026b2e3 in QMetaObject::activate (sender=0x89fdcf0, m=0x305b64, 
    local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3080
#36 0x002ab3bd in QTimer::timeout (this=0x89fdcf0)
    at .moc/debug-shared/moc_qtimer.cpp:126
#37 0x00275f56 in QTimer::timerEvent (this=0x89fdcf0, e=0xbf877a64)
    at kernel/qtimer.cpp:263
#38 0x0026a0e2 in QObject::event (this=0x89fdcf0, e=0xbf877a64)
    at kernel/qobject.cpp:1105
#39 0x00eb5d07 in QApplicationPrivate::notify_helper (this=0x86a2620, 
    receiver=0x89fdcf0, e=0xbf877a64) at kernel/qapplication.cpp:3772
#40 0x00eb6020 in QApplication::notify (this=0xbf877cf0, receiver=0x89fdcf0, 
    e=0xbf877a64) at kernel/qapplication.cpp:3366
#41 0x006c33e9 in KApplication::notify (this=0xbf877cf0, receiver=0x89fdcf0, 
    event=0xbf877a64)
    at /home/kde-devel/kde/src/kdelibs/kdeui/kernel/kapplication.cpp:311
#42 0x00256bb2 in QCoreApplication::notifyInternal (this=0xbf877cf0, 
    receiver=0x89fdcf0, event=0xbf877a64) at kernel/qcoreapplication.cpp:583
#43 0x0025a63b in QCoreApplication::sendEvent (receiver=0x89fdcf0, 
    event=0xbf877a64)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#44 0x00289045 in QTimerInfoList::activateTimers (this=0x86a7f54)
    at kernel/qeventdispatcher_unix.cpp:563
#45 0x00286164 in timerSourceDispatch (source=0x86a7f20)
    at kernel/qeventdispatcher_glib.cpp:166
#46 0x06cd91ac in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#47 0x06cdc5ef in ?? () from /lib/libglib-2.0.so.0
#48 0x06cdcb55 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#49 0x00285be4 in QEventDispatcherGlib::processEvents (this=0x869f9d0, 
    flags=@0xbf877bd8) at kernel/qeventdispatcher_glib.cpp:325
#50 0x00f5ddb4 in QGuiEventDispatcherGlib::processEvents (this=0x869f9d0, 
    flags=@0xbf877c08) at kernel/qguieventdispatcher_glib.cpp:204
#51 0x0025370e in QEventLoop::processEvents (this=0xbf877c80, 
    flags=@0xbf877c44) at kernel/qeventloop.cpp:149
#52 0x0025394d in QEventLoop::exec (this=0xbf877c80, flags=@0xbf877c88)
    at kernel/qeventloop.cpp:196
#53 0x0025739b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#54 0x00eb5a04 in QApplication::exec () at kernel/qapplication.cpp:3304
#55 0x080829ec in main (argc=2, argv=0xbf877ea4)
    at /home/kde-devel/kde/src/kdebase/apps/dolphin/src/main.cpp:94
#0  0x00110402 in __kernel_vsyscall ()
Comment 1 Peter Penz 2008-07-08 12:04:34 UTC
Reassigned to Strigi. @Jos: I'm not sure whether this is related to bug 164296, so I did not set it as duplicate.
Comment 2 mps 2008-07-08 12:23:13 UTC
Sorry, the .exe file that causes the crash is 1.9Mb and it won't let me upload. 
I can email it if you wish. It is shareware so ought to be available on the web 
as well.
Comment 3 Jos van den Oever 2008-07-08 13:10:34 UTC
On 8 Jul 2008 10:23:14 -0000, mstarkey@wcsgabon.org wrote:
[bugs.kde.org quoted mail]

Yes, please email me the exe or a download link.

Thanks,
Jos
Comment 4 mstarkey 2008-07-08 13:18:30 UTC
Here you go.

Cheers
M.

On Tuesday 08 July 2008 12:10:35 Jos van den Oever wrote:
[bugs.kde.org quoted mail]

<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
<html><head><meta name="qrichtext" content="1" /><style type="text/css">
p, li { white-space: pre-wrap; }
</style></head><body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
<p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;"></p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">Here you go.</p>
<p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;"></p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">Cheers</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">M.</p>
<p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;"></p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">On Tuesday 08 July 2008 12:10:35 Jos van den Oever wrote:</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; ------- You are receiving this mail because: -------</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; You reported the bug, or are watching the reporter.</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; http://bugs.kde.org/show_bug.cgi?id=166025</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; ------- Additional Comments From jos vandenoever info  2008-07-08 13:10</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; ------- On 8 Jul 2008 10:23:14 -0000, mstarkey wcsgabon org wrote:</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; [bugs.kde.org quoted mail]</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; Yes, please email me the exe or a download link.</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt;</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; Thanks,</p>
<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;">&gt; Jos</p>
<p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; -qt-user-state:0;"></p></body></html>


Created an attachment (id=25932)
winzip81.exe
Comment 5 Jos van den Oever 2008-07-09 00:45:18 UTC
SVN commit 829722 by vandenoever:

Fix a bug that can cause a crash on an executable zip file.
Put the stream in a substream so it can be reset to the start before passing it on the zip analyzer.

BUG: 166025



 M  +3 -1      zipexeendanalyzer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=829722