Fix a bug that can cause a crash on an executable zip file. Put the stream in a substream so it can be reset to the start before passing it on the zip analyzer.

BUG: 166025


svn path=/trunk/kdesupport/strigi/; revision=829722